@@ -26,6 +26,36 @@
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
         <plugins>
             <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>3.1.0</version>
+            <executions>
+            <execution>
+                <id>ktlint</id>
+                <phase>verify</phase>
+                <configuration>
+                    <target name="ktlint">
+                        <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
+                              classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
+                            <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+                            <arg value="src/**/*.kt"/>
+                        </java>
+                    </target>
+                </configuration>
+                <goals>
+                    <goal>run</goal>
+                </goals>
+            </execution>
+            </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.pinterest</groupId>
+                        <artifactId>ktlint</artifactId>
+                        <version>0.49.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>1.9.21</version>
